--- a/crm.html
+++ b/crm.html
@@ -1,119 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Business Communication Practice</title>
+<meta charset="UTF-8" />
+<title>Business Communication Trainer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-  body {
-    margin: 0;
-    font-family: Inter, system-ui, Arial, sans-serif;
-    background: linear-gradient(180deg, #0f1724, #020617);
-    color: #e6eef8;
+  body{
+    margin:0;
+    font-family:Inter, system-ui, Arial;
+    background:#0f172a;
+    color:#e5e7eb;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding:20px;
   }
 
-  .container {
-    max-width: 900px;
-    margin: 40px auto;
-    padding: 24px;
+  h1{
+    margin-bottom:8px;
   }
 
-  .card {
-    background: rgba(255,255,255,0.04);
-    border-radius: 14px;
-    padding: 24px;
-    border: 1px solid rgba(255,255,255,0.08);
+  .controls{
+    margin:12px 0;
   }
 
-  h1 {
-    margin-top: 0;
-    font-size: 26px;
+  button{
+    padding:10px 16px;
+    font-size:15px;
+    border:none;
+    border-radius:8px;
+    cursor:pointer;
+    margin-right:8px;
   }
 
-  .subtitle {
-    color: #94a3b8;
-    font-size: 14px;
-    margin-bottom: 20px;
+  #startBtn{ background:#22c55e; color:#022c22; }
+  #stopBtn{ background:#ef4444; color:white; }
+
+  #visualImage{
+    width:100%;
+    max-width:900px;
+    border-radius:12px;
+    margin:18px 0;
+    display:none;
+    opacity:0;
+    transition:opacity 0.4s ease;
   }
 
-  .btn {
-    background: #ffb020;
-    border: none;
-    padding: 14px 18px;
-    border-radius: 10px;
-    font-weight: 700;
-    cursor: pointer;
-    color: #081020;
-    font-size: 16px;
+  #textBox{
+    max-width:900px;
+    background:#020617;
+    padding:16px 18px;
+    border-radius:10px;
+    font-size:18px;
+    line-height:1.6;
+    min-height:80px;
   }
 
-  .btn:disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
-  }
-
-  .conversation {
-    margin-top: 24px;
-    padding: 16px;
-    background: rgba(255,255,255,0.03);
-    border-radius: 10px;
-    min-height: 260px;
-    line-height: 1.6;
-    font-size: 15px;
-  }
-
-  .line {
-    margin-bottom: 10px;
-    animation: fadeIn 0.3s ease;
-  }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(4px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  footer {
-    text-align: center;
-    font-size: 13px;
-    color: #94a3b8;
-    margin-top: 20px;
+  .speaking{
+    border-left:4px solid #38bdf8;
+    background:#020617;
   }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <div class="card">
-    <h1>Business Communication Practice</h1>
-    <div class="subtitle">
-      Click “Start Meeting” to hear professional business communication spoken out loud.
-    </div>
-
-    <button id="startBtn" class="btn">Start Meeting</button>
-<button id="stopBtn" class="btn" style="margin-left:8px;background:#ef4444;color:#fff">
-  Stop
-</button>
-
-
-    <div id="conversation" class="conversation"></div>
-  </div>
-
-  <footer>
-    Speak like a senior professional • CRM • Strategy • Client Calls
-  </footer>
+<h1>Business Communication Trainer</h1>
+<div class="controls">
+  <button id="startBtn">Start Meeting</button>
+  <button id="stopBtn">Stop</button>
 </div>
 
+<img id="visualImage" src="" alt="Context visual">
+
+<div id="textBox">Click “Start Meeting” to begin.</div>
+
 <script>
-/* ==================================================
-   COMPLETE BUSINESS COMMUNICATION MASTER LIST
-   (ALL LINES – ONE SET – NO CATEGORIES)
-================================================== */
-
-const COMMUNICATION_LINES = [
-
-  // Discovery / Understanding
+/* ===============================
+   YOUR 75 FINAL LINES (EXACT)
+================================ */
+const LINES = [
   "Before we jump into solutions, I want to clearly understand the business context from your perspective.",
   "To make sure we are aligned, could you share what the primary goal is for this phase?",
   "From your point of view, what is the biggest challenge you are trying to solve right now?",
@@ -122,7 +89,6 @@ const COMMUNICATION_LINES = [
   "What has worked well so far, and where do you feel things have not met expectations?",
   "I want to understand the customer behavior better before suggesting any next steps.",
 
-  // Agenda / Structure
   "Let me quickly outline the agenda so we can use the time effectively.",
   "The objective of today’s call is to align on priorities and next steps.",
   "We will cover performance, upcoming plans, and approvals in that order.",
@@ -130,7 +96,6 @@ const COMMUNICATION_LINES = [
   "Does this agenda work for everyone before we proceed?",
   "If anything feels out of scope, we can park it and revisit later.",
 
-  // Performance / Data
   "Let me start with the outcome first, and then I’ll explain the drivers behind it.",
   "Overall, the campaign performed better than last month in terms of conversions.",
   "Where we saw a dip was in open rates, mainly due to audience saturation.",
@@ -139,7 +104,6 @@ const COMMUNICATION_LINES = [
   "The key learning from this campaign is something we can directly apply going forward.",
   "There are some gaps, and I want to call them out transparently.",
 
-  // Strategy
   "Based on what we’re seeing in the data, there are two clear approaches we can take.",
   "From a strategic standpoint, this aligns well with your long-term retention goals.",
   "If the objective is revenue growth, then this is the lever we should prioritize.",
@@ -148,7 +112,6 @@ const COMMUNICATION_LINES = [
   "We should think of this in phases rather than treating it as a one-time activity.",
   "This approach allows us to scale what works while learning continuously.",
 
-  // Approval / Decisions
   "To move forward, we need confirmation on the final creative and send time.",
   "What we are seeking approval for today is the campaign structure and audience.",
   "Once this is approved, we can proceed without any further dependency.",
@@ -156,7 +119,6 @@ const COMMUNICATION_LINES = [
   "Can we align on this today so we stay on track with the timeline?",
   "If this works for you, we’ll proceed exactly as discussed.",
 
-  // Issues / Escalation
   "I want to acknowledge this upfront — this should not have happened.",
   "You are right to call this out, and I take responsibility for it.",
   "The root cause of this issue was a process gap on our side.",
@@ -165,7 +127,6 @@ const COMMUNICATION_LINES = [
   "I’ll personally ensure this stays on track from here.",
   "The revised timeline is clear, and we are aligned on next steps.",
 
-  // Alignment / Expectations
   "Just to align expectations clearly, this is how we propose handling execution.",
   "Going forward, this will be the process we follow for all campaigns.",
   "To avoid any confusion later, we’ll document and share all updates in writing.",
@@ -173,7 +134,6 @@ const COMMUNICATION_LINES = [
   "This is what you can expect from us on a weekly basis.",
   "Please let us know if this structure works for you.",
 
-  // Insights
   "Rather than reviewing every metric, let’s focus on what actually matters.",
   "The key insight here is how user intent changes across channels.",
   "What this data tells us is that timing matters more than frequency.",
@@ -181,7 +141,6 @@ const COMMUNICATION_LINES = [
   "If we connect these data points, the pattern becomes very clear.",
   "This insight helps us make a more informed decision moving forward.",
 
-  // Feedback
   "I’d really appreciate your honest feedback on this approach.",
   "Does this align with what you had in mind?",
   "That’s fair feedback, and I appreciate you sharing it openly.",
@@ -189,7 +148,6 @@ const COMMUNICATION_LINES = [
   "Let’s treat this as an opportunity to improve, not a setback.",
   "We’ll reflect this feedback in the next iteration.",
 
-  // Internal Coordination
   "Today’s top priority is completing the campaign assets on time.",
   "Let’s align on ownership so there’s no confusion later.",
   "Design will deliver by 4 PM, and copy by 5 PM.",
@@ -197,14 +155,12 @@ const COMMUNICATION_LINES = [
   "I’ll review everything and share feedback in one consolidated round.",
   "Let’s stay focused so we don’t miss timelines.",
 
-  // Time Management
   "That’s an important point, but it’s slightly out of scope for today’s call.",
   "To stay on track, let’s come back to the main decision.",
   "We can park this for now and revisit if time permits.",
   "Let’s close the priority items first and then circle back.",
   "I want to respect everyone’s time and keep this focused.",
 
-  // Closure
   "To summarize, we’ve aligned on the strategy, timelines, and ownership.",
   "Next steps from our side are clearly defined.",
   "We’ll share a written recap with timelines shortly.",
@@ -213,82 +169,88 @@ const COMMUNICATION_LINES = [
   "Let’s reconnect after we have performance data to review."
 ];
 
-/* ==================================================
-   CORE ENGINE (CONTINUOUS + RANDOM + NO REPEAT)
-================================================== */
-
-const conversationBox = document.getElementById("conversation");
-const startBtn = document.getElementById("startBtn");
-const stopBtn = document.getElementById("stopBtn");
-
+/* ===============================
+   STATE
+================================ */
 let isRunning = false;
-const speechEnabled = "speechSynthesis" in window;
+let order = [];
+let index = 0;
 
-// Shuffle once per cycle
-function shuffle(arr) {
-  const a = arr.slice();
-  for (let i = a.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
-    [a[i], a[j]] = [a[j], a[i]];
+/* ===============================
+   HELPERS
+================================ */
+function shuffle(n){
+  const arr = [...Array(n).keys()];
+  for(let i=arr.length-1;i>0;i--){
+    const j = Math.floor(Math.random()*(i+1));
+    [arr[i],arr[j]]=[arr[j],arr[i]];
   }
-  return a;
+  return arr;
 }
 
-function speakAsync(text) {
-  return new Promise(resolve => {
-    if (!speechEnabled || !isRunning) return resolve();
+function speakAsync(text){
+  return new Promise(resolve=>{
     const u = new SpeechSynthesisUtterance(text);
-    u.rate = 1.5;    // 1.5x speed
+    u.rate = 1.5;
     u.pitch = 0.95;
-    u.volume = 1;
     u.onend = resolve;
     u.onerror = resolve;
-    window.speechSynthesis.speak(u);
+    speechSynthesis.speak(u);
   });
 }
 
-function delay(ms) {
-  return new Promise(r => setTimeout(r, ms));
+/* ===============================
+   PLAY ONE LINE
+================================ */
+async function playLine(i){
+  const img = document.getElementById("visualImage");
+  const box = document.getElementById("textBox");
+
+  const imgNum = String(i+1).padStart(3,"0");
+  img.src = `images/line_${imgNum}.png`;
+
+  img.style.display="block";
+  requestAnimationFrame(()=>img.style.opacity="1");
+
+  box.textContent = LINES[i];
+  box.classList.add("speaking");
+
+  await speakAsync(LINES[i]);
+
+  img.style.opacity="0";
+  box.classList.remove("speaking");
+  await new Promise(r=>setTimeout(r,400));
+  img.style.display="none";
 }
 
-async function startMeeting() {
-  if (isRunning) return;
+/* ===============================
+   MAIN LOOP
+================================ */
+async function startMeeting(){
+  if(isRunning) return;
   isRunning = true;
-  startBtn.disabled = true;
-  conversationBox.innerHTML = "";
 
-  while (isRunning) {
-    const cycle = shuffle(COMMUNICATION_LINES);
-
-    for (const line of cycle) {
-      if (!isRunning) break;
-
-      const div = document.createElement("div");
-      div.className = "line";
-      div.textContent = line;
-      conversationBox.appendChild(div);
-      conversationBox.scrollTop = conversationBox.scrollHeight;
-
-      await speakAsync(line);
-      await delay(500);
+  while(isRunning){
+    order = shuffle(LINES.length);
+    for(const i of order){
+      if(!isRunning) break;
+      await playLine(i);
+      await new Promise(r=>setTimeout(r,600));
     }
-
-    await delay(800); // pause between cycles
   }
-
-  startBtn.disabled = false;
 }
 
-function stopMeeting() {
+function stopMeeting(){
   isRunning = false;
-  window.speechSynthesis.cancel();
-  startBtn.disabled = false;
+  speechSynthesis.cancel();
 }
 
-startBtn.addEventListener("click", startMeeting);
-stopBtn.addEventListener("click", stopMeeting);
+/* ===============================
+   EVENTS
+================================ */
+document.getElementById("startBtn").onclick = startMeeting;
+document.getElementById("stopBtn").onclick = stopMeeting;
 </script>
 
 </body>
 </html>
-
